# security-system

./: .gitignore  Cargo.toml  README.md  config.example.toml
src/: alerts.rs  config.rs  main.rs  webhooks.rs
src/communications/: email.rs  mod.rs  pushover.rs  sms.rs  text_anywhere.rs
src/monitors/: cctv.rs  cron.rs  healthcheck.rs  internet.rs  mod.rs  ping.rs  power.rs  processes.rs  sentry.rs  services.rs  systemctl.rs
