[package]
name = "security-system"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
async-trait = "0.1.83"
env_logger = "0.11.5"
log = "0.4.22"
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["full"] }
warp = "0.3.7"
serde = { version = "1.0.214", features = ["derive"] }
sentry = "0.46.1"
sentry-log = "0.46.1"
futures = "0.3.31"
reqwest = { version = "0.12.28", features = ["rustls-tls"] }
sentry-panic = "0.46.1"
sentry-anyhow = "0.46.1"
dotenv = "0.15.0"
sms-client = { version = "2.0.0", features = ["http-tls-rustls"] }
toml = "0.9.11"
