[package]
name = "sentinel"
version = "0.5.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
async-trait = "0.1.83"
env_logger = "0.11.5"
log = "0.4.22"
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["rt-multi-thread", "time"] }
warp = { version = "0.3.7", features = ["tokio-rustls"] }
serde = { version = "1.0.214", features = ["derive"] }
sentry = { version = "0.46.1", default-features = false, features = ["rustls"] }
sentry-log = "0.46.1"
futures = "0.3.31"
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls"] }
sentry-panic = "0.46.1"
sentry-anyhow = "0.46.1"
dotenv = "0.15.0"
sms-client = { version = "2.2.0", features = ["http-tls-rustls"] }
toml = "0.9.11"
